--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse-1140409223\testng-customsuite.xml</span>
+                    <span>C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse--1092369657\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Wait_IN_Selenium.Explicit_Wait" class="method navigator-link" hash-for-method="CheckBox">CheckBox</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Wait_IN_Selenium.DatePicker" class="method navigator-link" hash-for-method="Date_pick_Test">Date_pick_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Wait_IN_Selenium.Explicit_Wait</span>
+              <span class="class-name">Wait_IN_Selenium.DatePicker</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CheckBox">
-                  </a> <!-- CheckBox -->
-                  <span class="method-name">CheckBox</span>
+                  <a name="Date_pick_Test">
+                  </a> <!-- Date_pick_Test -->
+                  <span class="method-name">Date_pick_Test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse-1140409223\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse--1092369657\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Wait_IN_Selenium.Explicit_Wait&quot;/&gt;
+      &lt;class name=&quot;Wait_IN_Selenium.DatePicker&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;Date_pick_Test&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- Wait_IN_Selenium.DatePicker --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'CheckBox')
-data.setCell(0, 2, 'Wait_IN_Selenium.Explicit_Wait')
-data.setCell(0, 3, 5453);
+data.setCell(0, 1, 'Date_pick_Test')
+data.setCell(0, 2, 'Wait_IN_Selenium.DatePicker')
+data.setCell(0, 3, 10228);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +224,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Wait_IN_Selenium.Explicit_Wait</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Wait_IN_Selenium.DatePicker</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">CheckBox</span>
-                <span class="method-start">15461 ms</span>
+                <span class="method-name">Date_pick_Test</span>
+                <span class="method-start">7522 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">TearDown</span>
-                <span class="method-start">20934 ms</span>
+                <span class="method-name">teardown</span>
+                <span class="method-start">17761 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
